clusters/production/apps/node-red-production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: node-red-production
  labels:
    app.kubernetes.io/part-of: production
